--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.3.11'
+        kotlin_version = '1.3.20'
         appcompat_version = '1.0.0-rc02'
-        navigation_version = '1.0.0-alpha05'
+        navigation_version = '1.0.0-rc02'
         retrofit_version = '2.4.0'
         jackson_version = '2.1.0'
         glide_version = '4.8.0'
